--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: java
+jdk:
+  - oraclejdk8
 deploy:
   provider: bintray
   file: Path to a descriptor file, containing information for the Bintray upload
