--- a/.bintray_descriptor.yml
+++ b/.bintray_descriptor.yml
@@ -12,7 +12,7 @@
         "issue_tracker_url": "https://github.com/lind/statemachine/issues",
         "vcs_url": "https://github.com/lind/statemachine.git",
         "github_use_tag_release_notes": true,
-#        "github_release_notes_file": "RELEASE.txt",
+//       "github_release_notes_file": "RELEASE.txt",
         "licenses": ["Apache-2.0"],
         "labels": ["cool", "awesome"],
         "public_download_numbers": false,
