--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,19 @@ version '0.0.1'
 apply plugin: 'groovy'
 apply plugin: 'java'
 apply plugin: 'maven-publish'
+apply plugin: 'jacoco'
 // apply plugin: 'cobertura'
 //apply plugin: 'com.github.kt3k.coveralls'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true // coveralls plugin depends on xml format report
+        html.enabled = true
+    }
+}
 
 cobertura.coverageFormats = ['html', 'xml'] // coveralls plugin depends on xml format report
 
