--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ language: java
 jdk:
 - oraclejdk8
 
-before_script:
-- pip install --user codecov
+before_install:
+  - pip install --user codecov
+
+#before_script:
+#- pip install --user codecov
 
 after_success:
 - codecov
