--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: java
 # install: sudo apt-get install graphviz -y
+# sudo: false # faster builds
 # script:
 jdk:
 - oraclejdk8
 
 before_install:
+  - pip install --upgrade pip
   - pip install --user codecov
 
 #before_script:
@@ -12,6 +14,7 @@ before_install:
 
 after_success:
 - codecov
+- ./gradlew jacocoTestReport coveralls
 
 #after_success:
 #- bash <(curl -s https://codecov.io/bash)
