--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ jacocoTestReport {
 check.dependsOn jacocoTestReport
 
 cobertura {
-//    coverageSourceDirs = ['src/main/java']
+    coverageSourceDirs = ['src/main/java']
     coverageFormats = ['html', 'xml'] // coveralls plugin depends on xml format report
 }
 
